packages/fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.stderr
error: custom attribute panicked
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/bad_simple_wasm_graphql.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Bad schema.: ParseError(Syntax { message: " --> 1:1\n  |\n1 | namespace: test_namespace\n  | ^---\n  |\n  = expected type_system_definition", start: Pos(1:1), end: None })

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         header: fuel::Header {
  |                 ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
32 |         header: fuels::Header {
   |                 ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         transactions: vec![fuel::TransactionData {
  |                            ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
45 |         transactions: vec![fuels::TransactionData {
   |                            ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |                 fuel::Receipt::Call {
  |                 ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
49 |                 fuels::Receipt::Call {
   |                 ~~~~~

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |                 fuel::Receipt::ReturnData {
  |                 ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
60 |                 fuels::Receipt::ReturnData {
   |                 ~~~~~

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let s = SomeEvent {
  |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `BlockData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                   ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::BlockData;
   |
2  | use fuel_indexer_types::fuel::BlockData;
   |
2  | use fuel_indexer_utils::prelude::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `BlockData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let data: Vec<BlockData> = vec![BlockData {
  |                                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::BlockData;
   |
2  | use fuel_indexer_types::fuel::BlockData;
   |
2  | use fuel_indexer_utils::prelude::BlockData;
   |

error[E0433]: failed to resolve: use of undeclared type `Consensus`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         consensus: Consensus::default(),
  |                    ^^^^^^^^^ use of undeclared type `Consensus`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::fuel::Consensus;
   |
2  | use fuel_indexer_types::fuel::Consensus;
   |
2  | use fuel_indexer_utils::prelude::HeaderData;
   |

error[E0433]: failed to resolve: use of undeclared crate or module `fuel`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             status: fuel::TransactionStatusData::default(),
  |                     ^^^^ use of undeclared crate or module `fuel`
  |
help: there is a crate or module with a similar name
   |
47 |             status: fuels::TransactionStatusData::default(),
   |                     ~~~~~
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::fuel::TransactionStatusData;
   |
2  | use fuel_indexer_types::fuel::TransactionStatusData;
   |
help: if you import `TransactionStatusData`, refer to it directly
   |
47 -             status: fuel::TransactionStatusData::default(),
47 +             status: TransactionStatusData::default(),
   |

error[E0433]: failed to resolve: use of undeclared type `Transaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             transaction: Transaction::default(),
  |                          ^^^^^^^^^^^ use of undeclared type `Transaction`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::fuel::Transaction;
   |
2  | use fuel_indexer_types::fuel::Transaction;
   |
2  | use fuel_indexer_utils::prelude::ConsensusData;
   |

error[E0422]: cannot find struct, variant or union type `TransactionData` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |         transactions: vec![TransactionData {
  |                            ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::TransactionData;
   |
2  | use fuel_indexer_types::prelude::TransactionData;
   |
2  | use fuel_indexer_utils::prelude::TransactionData;
   |

error[E0433]: failed to resolve: use of undeclared type `ClientTransactionStatusData`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             status: ClientTransactionStatusData::default(),
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ClientTransactionStatusData`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::ClientTransactionStatusData;
   |
2  | use fuel_indexer_types::prelude::ClientTransactionStatusData;
   |
2  | use fuel_indexer_utils::prelude::ClientTransactionStatusData;
   |

error[E0433]: failed to resolve: use of undeclared type `ClientTransaction`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |             transaction: ClientTransaction::default(),
  |                          ^^^^^^^^^^^^^^^^^ use of undeclared type `ClientTransaction`
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::prelude::ClientTransaction;
   |
2  | use fuel_indexer_types::prelude::ClientTransaction;
   |
2  | use fuel_indexer_utils::prelude::ClientTransaction;
   |

error[E0425]: cannot find function `serialize` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     let mut bytes = serialize(&data);
  |                     ^^^^^^^^^ not found in this scope
  |
help: consider importing one of these items
   |
2  | use fuel_indexer_lib::utils::serialize;
   |
2  | use fuel_indexer_plugin::serialize;
   |
2  | use fuel_indexer_utils::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     handle_events(ptr, len);
  |     ^^^^^^^^^^^^^ not found in this scope

error: unused import: `types::traits::Tokenizable`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_schema_arg_is_invalid.rs
  |
  |     use fuels::{core::abi_encoder::ABIEncoder, types::traits::Tokenizable};
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `-D unused-imports` implied by `-D warnings`
